# g3-corfu-butterflies

./: .gitignore  BENCHMARK.md  DATAVERSE_METADATA.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-paper.yml
data/: butterflies_source.csv  label_vocab.json  metadata.csv
data/embeddings/: README.md  clip_vitb32.npy  index.csv  manifest.json  vitb16_imagenet.npy
data/splits/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  holdout_test.csv
notebooks/: colab_quickstart.ipynb
paper/: main.tex  references.bib
paper/figures/: baseline_table.tex  label_top.tex  namespace_stats.tex  split_support.tex
results/: clip_linear_probe.json  holdout_metrics.json  summary.json
results/fold_0/: metrics.json
results/fold_1/: metrics.json
results/fold_2/: metrics.json
results/fold_3/: metrics.json
results/fold_4/: metrics.json
scripts/: dataset_analysis.py  export_results.py  extract_embeddings.py  figures.R  make_examples_figure.py  prepare_dataset.py  upload_dataverse.py
src/g3/: __init__.py  clip_baseline.py  data.py  evaluate.py  holdout_eval.py  model.py  train.py
